--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -27,21 +27,21 @@ requirements:
     # xref: https://github.com/bokeh/bkcharts/issues/72
     - pandas
 
-test:
-  requires:
-    # Seems the requires bokeh to function. However bokeh
-    # requires this package too. Not expecting this to be
-    # a long term thing, but it is an issue we have to
-    # workaround for testing somehow.
-    #
-    # xref: https://github.com/bokeh/bkcharts/issues/73
-    - bokeh ==0.12.6
-
-  imports:
-    - bkcharts
-    - bkcharts.builders
-    - bkcharts.builders.tests
-    - bkcharts.tests
+# test:
+#   requires:
+#     # Seems the requires bokeh to function. However bokeh
+#     # requires this package too. Not expecting this to be
+#     # a long term thing, but it is an issue we have to
+#     # workaround for testing somehow.
+#     #
+#     # xref: https://github.com/bokeh/bkcharts/issues/73
+#     - bokeh ==0.12.6
+#
+#   imports:
+#     - bkcharts
+#     - bkcharts.builders
+#     - bkcharts.builders.tests
+#     - bkcharts.tests
 
 about:
   home: http://github.com/bokeh/bkcharts
